# wazicloud-api

./: Dockerfile  README.md  stack.yaml  waziup.cabal
aesonbson/Data/AesonBson/: Instances.hs
data/ontologies/: quantity_kinds.json  sensing_devices.json  units.json
main/: Main.hs
migrate/: Main.hs
orion-hs/: orion-hs.cabal
orion-hs/src/Orion/: Client.hs  Types.hs
src/: MQTT.hs  Main.hs  Mongo.hs  Paths_Waziup_Servant.hs
src/Keycloak/: Client.hs  Types.hs
src/Mongo/: Client.hs  Types.hs
src/Orion/: Client.hs  Types.hs
src/Waziup/: .Projects.hs.swl  API.hs  Actuators.hs  Auth.hs  Config.hs  Devices.hs  Gateways.hs  Measurements.hs  Notifs.hs  Ontologies.hs  Projects.hs  SensorData.hs  Sensors.hs  Server.hs  Socials.hs  Types.hs  Users.hs  Utils.hs
test/: Main.hs
