name:                waziup
version:             0.1.0.0
synopsis:            API server for Waziup 
description:         Please see README.md
homepage:            https://github.com/cdupont/Waziup-API-HS.git
author:              Corentin Dupont
maintainer:          corentin.dupont@gmail.com
copyright:           2018 - Waziup
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Executable waziup-servant
  hs-source-dirs:      src
  Main-Is:             Main.hs
  other-modules:       Waziup.API
                     , Waziup.Ontologies
                     , Waziup.Projects
                     , Waziup.Devices
                     , Waziup.Server
                     , Waziup.Types
                     , Waziup.Utils
                     , Keycloak
                     , Keycloak.Client
                     , Keycloak.Types
                     , Orion
                     , Orion.Client
                     , Orion.Types
                     , Mongo
                     , Mongo.Client
                     , Mongo.Types
                     , Paths_Waziup_Servant
  data-dir: data
  data-files: ontologies/*.json
  ghc-options:         -Wall
  build-depends:       base
                     , aeson
                     , aeson-better-errors
                     , text
                     , containers
                     , network-uri
                     , servant
                     , http-api-data
                     , servant
                     , servant-client
                     , servant-server
                     , servant-flatten
                     , servant-swagger
                     , servant-swagger-ui
                     , servant-swagger-ui-core
                     , swagger2
                     , warp
                     , transformers
                     , mtl
                     , http-client
                     , http-types
                     , wai
                     , wai-extra
                     , wreq
                     , lens
                     , lens-aeson
                     , base64-bytestring
                     , split
                     , bytestring
                     , time
                     , unordered-containers
                     , safe
                     , iso8601-time
                     , aeson-casing
                     , vector
                     , scientific
                     , lifted-base
                     , exceptions
                     , hslogger
                     , filepath
                     , word8
                     , base64-bytestring
                     , unordered-containers
                     , mongoDB
                     , AesonBson
                     , bson
                     , string-conversions
                     , optparse-applicative
                     , validation
  default-language:    Haskell2010
