name:                waziup
version:             0.1.0.0
synopsis:            API server for Waziup 
description:         Please see README.md
homepage:            https://github.com/cdupont/Waziup-API-HS.git
author:              Corentin Dupont
maintainer:          corentin.dupont@gmail.com
copyright:           2018 - Waziup
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Library waziup-lib
  hs-source-dirs:      src
  exposed-modules:     Waziup.API
                     , Waziup.Ontologies
                     , Waziup.Projects
                     , Waziup.Gateways
                     , Waziup.Devices
                     , Waziup.Sensors
                     , Waziup.SensorData
                     , Waziup.Server
                     , Waziup.Actuators
                     , Waziup.Users
                     , Waziup.Types
                     , Waziup.Auth
                     , Waziup.Socials
                     , Waziup.Utils
                     , Waziup.Notifs
                     , Waziup.Config
                     , Paths_Waziup_Servant
                     , MQTT
  ghc-options:       -Wall -fno-warn-orphans
  build-depends:       base
                     , aeson
                     , aeson-casing
                     , AesonBson
                     , bson
                     , bytestring
                     , base64-bytestring
                     , async
                     , attoparsec
                     , cache == 0.1.2.0
                     , conduit
                     , conduit-extra
                     , containers
                     , cassava
                     , clock
                     , extra
                     , exceptions
                     , filepath
                     , hashable
                     , hslogger
                     , http-client
                     , http-api-data
                     , http-types
                     , iso8601-time
                     , jwt >= 0.10
                     , keycloak-hs
                     , lens
                     , lens-aeson
                     , mtl
                     , mongoDB
                     , net-mqtt
                     , orion-hs
                     , resource-pool
                     , safe
                     , scientific
                     , servant
                     , servant-server
                     , servant-flatten
                     , servant-swagger
                     , servant-swagger-ui
                     , servant-cassava
                     , split
                     , string-conversions
                     , stm
                     , swagger2
                     , text
                     , time
                     , transformers
                     , twitter-conduit
                     , twitter-types
                     , optparse-applicative
                     , unordered-containers
                     , validation
                     , vector
                     , word8
                     , wreq
  default-language:    Haskell2010

Executable waziup-servant
  hs-source-dirs:      main
  Main-Is:             Main.hs
  ghc-options:        -threaded -Wall
  build-depends:       base
                     , waziup-lib
                     , warp
                     , wai
                     , wai-extra
                     , wai-cors
                     , hslogger
                     , string-conversions
                     , lens
  default-language:    Haskell2010

Executable migrate
  hs-source-dirs:      migrate
  Main-Is:             Main.hs
  ghc-options:        -threaded -Wall -optl-static -fPIC
  build-depends:       base
                     , waziup-lib
                     , keycloak-hs
                     , orion-hs
                     , hslogger
  default-language:    Haskell2010

Executable test
  hs-source-dirs:      test
  Main-Is:             Main.hs
  ghc-options:        -threaded -Wall
  build-depends:       base
                     , waziup-lib
                     , keycloak-hs
                     , orion-hs
                     , hslogger
                     , time
                     , containers
  default-language:    Haskell2010
