cabal-version: 1.12
name:           orion-hs
version:        0.2.0
description:    Please see the README on GitHub at <https://github.com/cdupont/orion-hs#readme>
homepage:       https://github.com/cdupont/orion-hs#readme
bug-reports:    https://github.com/cdupont/orion-hs/issues
author:         Corentin Dupont
maintainer:     corentin.dupont@gmail.com
copyright:      2019 Corentin Dupont
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/orion-hs

library
  exposed-modules:
      Orion
    , Orion.Types
    , Orion.Client
  other-modules:
      Paths_orion_hs
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , aeson-casing
    , aeson-better-errors
    , bytestring
    , base64-bytestring
    , containers
    , extra
    , exceptions
    , http-client
    , http-api-data
    , http-types
    , hslogger
    , iso8601-time
    , lens
    , mtl
    , string-conversions
    , text
    , time
    , unordered-containers
    , word8
    , wreq
  default-language: Haskell2010

